reset password and some validation implemented